feat(encoding): reencode indexb series to utf-8 (#40)

--- a/printba0c.html
+++ b/printba0c.html
@@ -1,10 +1,10 @@
 <html>
-<title>Ĺńëč áű íĺ ÝŇÎ, âű áű óćĺ äîńňčăëč ńâîčő öĺëĺé.</title>
+<title>Ĺńлč бű нĺ ЭŇО, вű бű уćĺ доńňčăлč ńвоčő цĺлĺй.</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4DF9 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:23:22 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
-<meta name="description" content='Ďđĺäńňŕâüňĺ ńĺáĺ, ÷ňî ÷ĺëîâĺę — ýňî óëüňđŕňĺőíîëîăč÷íűé ŕâňîěîáčëü čç áóäóůĺăî, ńďîńîáíűé ďĺđĺěĺůŕňüń˙ ńî ńâĺđőçâóęîâîé ńęîđîńňüţ ăäĺ óăîäíî. Č, ęîíĺ÷íî ćĺ, ó íĺăî ĺńňü ďóíęň íŕçíŕ÷ĺíč˙ — âŕřŕ öĺëü čëč äŕćĺ ěĺ÷ňŕ. Ń őîđîřĺé ęŕđňîé (çíŕíčĺě) č/čëč đŕäŕđîě (číňóčöčĺé) îí íĺčçáĺćíî ĺĺ äîńňčăíĺň.'>
+<meta name="description" content='Ďđĺдńňŕвьňĺ ńĺбĺ, чňо чĺловĺę — эňо ульňđŕňĺőнолоăčчнűй ŕвňоěобčль čз будуůĺăо, ńďоńобнűй ďĺđĺěĺůŕňьń˙ ńо ńвĺđőзвуęовой ńęоđоńňьţ ăдĺ уăодно. Č, ęонĺчно ćĺ, у нĺăо ĺńňь ďунęň нŕзнŕчĺнč˙ — вŕřŕ цĺль čлč дŕćĺ ěĺчňŕ. Ń őоđоřĺй ęŕđňой (знŕнčĺě) č/čлč đŕдŕđоě (čнňуčцčĺй) он нĺčзбĺćно ĺĺ доńňčăнĺň.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
 <!--
@@ -14,19 +14,19 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËĎ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Ĺńëč áű íĺ ÝŇÎ, âű áű óćĺ äîńňčăëč ńâîčő öĺëĺé.</h1><a href=indexba0c.html?id=F4DF9 class=slink>web-âĺđńč˙</a><p><span class='print'><p></p>
+<a href=index.html><img src='images/logo.png' alt='НЛĎ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Ĺńлč бű нĺ ЭŇО, вű бű уćĺ доńňčăлč ńвоčő цĺлĺй.</h1><a href=indexba0c.html?id=F4DF9 class=slink>web-вĺđńč˙</a><p><span class='print'><p></p>
 
 <p></p>
 
-<p><span style="font-size:16px;">Ďđĺäńňŕâüňĺ ńĺáĺ, ÷ňî ÷ĺëîâĺę — ýňî óëüňđŕňĺőíîëîăč÷íűé ŕâňîěîáčëü čç áóäóůĺăî, ńďîńîáíűé ďĺđĺěĺůŕňüń˙ ńî ńâĺđőçâóęîâîé ńęîđîńňüţ ăäĺ óăîäíî.</span></p>
+<p><span style="font-size:16px;">Ďđĺдńňŕвьňĺ ńĺбĺ, чňо чĺловĺę — эňо ульňđŕňĺőнолоăčчнűй ŕвňоěобčль čз будуůĺăо, ńďоńобнűй ďĺđĺěĺůŕňьń˙ ńо ńвĺđőзвуęовой ńęоđоńňьţ ăдĺ уăодно.</span></p>
 
 <p style="text-align: center;"><span style="color: rgb(38, 38, 38); font-size: 16px; background-color: rgb(255, 255, 255);"> <img alt="" src="img/unnamed%20(1).jpg" style="width: 600px; height: 366px;" /></span></p>
 
 <p></p>
 
-<p><span style="font-size:16px;">Č, ęîíĺ÷íî ćĺ, ó íĺăî ĺńňü ďóíęň íŕçíŕ÷ĺíč˙ — âŕřŕ öĺëü čëč äŕćĺ ěĺ÷ňŕ.<br />
+<p><span style="font-size:16px;">Č, ęонĺчно ćĺ, у нĺăо ĺńňь ďунęň нŕзнŕчĺнč˙ — вŕřŕ цĺль čлč дŕćĺ ěĺчňŕ.<br />
 <br />
-Ń őîđîřĺé ęŕđňîé (çíŕíčĺě) č/čëč đŕäŕđîě (číňóčöčĺé) îí íĺčçáĺćíî ĺĺ äîńňčăíĺň. </span></p>
+Ń őоđоřĺй ęŕđňой (знŕнčĺě) č/čлč đŕдŕđоě (čнňуčцčĺй) он нĺčзбĺćно ĺĺ доńňčăнĺň. </span></p>
 
 <p></p>
 
@@ -34,14 +34,14 @@ body {
 
 <p></p>
 
-<p><span style="font-size:16px;">Íî ĺńëč ěŕńëî ňĺ÷ĺň, ŕęęóěóë˙ňîđű ńĺëč, ŕ «đó÷íčę» çŕęëčíčë, <br />
-č ňű ĺäĺřü ńî ńęîđîńňüţ ěŕăŕçčííîé ňĺëĺćęč, ń ďîńňî˙ííűě çŕíîńîě âëĺâî…<br />
+<p><span style="font-size:16px;">Но ĺńлč ěŕńло ňĺчĺň, ŕęęуěул˙ňоđű ńĺлč, ŕ «đучнčę» зŕęлčнčл, <br />
+č ňű ĺдĺřь ńо ńęоđоńňьţ ěŕăŕзčнной ňĺлĺćęč, ń ďоńňо˙ннűě зŕноńоě влĺво…<br />
 <br />
-Ňî ó ňŕęîăî ŕâňîěîáčë˙ âđ˙ä ëč ĺńňü řŕíńű.</span></p>
+Ňо у ňŕęоăо ŕвňоěобčл˙ вđ˙д лč ĺńňь řŕнńű.</span></p>
 
 <div></div>
 
-<div><span style="font-size:16px;">...Őîň˙, ěîćíî, ęîíĺ÷íî, ďđčńďîńîáčňüń˙ ćčňü č ňŕę:</span></div>
+<div><span style="font-size:16px;">...Őоň˙, ěоćно, ęонĺчно, ďđčńďоńобčňьń˙ ćčňь č ňŕę:</span></div>
 
 <div style="color: rgb(38, 38, 38); font-size: 16px; background-color: rgb(255, 255, 255);">  </div>
 
@@ -63,7 +63,7 @@ body {
 
 <h2 style="color: rgb(38, 38, 38); font-size: 16px; background-color: rgb(255, 255, 255);"></h2>
 
-<h2 style="color: rgb(38, 38, 38); font-size: 16px; background-color: rgb(255, 255, 255);"><span style="color: rgb(38, 38, 38); font-size: 26px; text-align: center; background-color: rgb(255, 255, 255);">                           </span><span style="font-size:26px;">  Č äŕćĺ ňŕę:</span></h2>
+<h2 style="color: rgb(38, 38, 38); font-size: 16px; background-color: rgb(255, 255, 255);"><span style="color: rgb(38, 38, 38); font-size: 26px; text-align: center; background-color: rgb(255, 255, 255);">                           </span><span style="font-size:26px;">  Č дŕćĺ ňŕę:</span></h2>
 
 <p></p>
 
@@ -83,7 +83,7 @@ body {
 
 <div style="color: rgb(38, 38, 38); font-size: 16px; background-color: rgb(255, 255, 255);"></div>
 
-<div><span style="font-size:16px;">Íî âđ˙ä ëč ňŕę âű ńěîćĺňĺ äîáđŕňüń˙ äî ńâîĺé ěĺ÷ňű.</span></div>
+<div><span style="font-size:16px;">Но вđ˙д лč ňŕę вű ńěоćĺňĺ добđŕňьń˙ до ńвоĺй ěĺчňű.</span></div>
 
 <div></div>
 
@@ -93,21 +93,21 @@ body {
 
 <div></div>
 
-<h2><span style="font-size:26px;">Ęŕę ýňî ďđîčńőîäčň â ÷ĺëîâĺęĺ?</span></h2>
+<h2><span style="font-size:26px;">Ęŕę эňо ďđоčńőодčň в чĺловĺęĺ?</span></h2>
 
 <div></div>
 
 <div></div>
 
-<div><span style="font-size:16px;">Ňî ćĺ ńŕěîĺ ďđîčńőîäčň č ń ÷ĺëîâĺęîě. Ňîëüęî ěű íĺ çŕěĺ÷ŕĺě, íŕęîďčâřčĺń˙ «ďńčőîëîăč÷ĺńęčĺ ňîđěîçŕ» (ďđčâű÷ęč, ńňđŕőč, îăđŕíč÷čâŕţůčĺ âĺđîâŕíč˙, áîëĺçíĺííűĺ đĺŕęöčč íŕ ęŕęčĺ-ňî ńčňóŕöčč).</span></div>
+<div><span style="font-size:16px;">Ňо ćĺ ńŕěоĺ ďđоčńőодčň č ń чĺловĺęоě. Ňольęо ěű нĺ зŕěĺчŕĺě, нŕęоďčвřčĺń˙ «ďńčőолоăčчĺńęčĺ ňоđěозŕ» (ďđčвűчęč, ńňđŕőč, оăđŕнčчčвŕţůčĺ вĺđовŕнč˙, болĺзнĺннűĺ đĺŕęцčč нŕ ęŕęčĺ-ňо ńčňуŕцčč).</span></div>
 
 <div><span style="font-size:16px;">  </span></div>
 
 <div></div>
 
-<div><span style="font-size:16px;">Ěű ďđîńňî íŕ÷číŕĺě çŕěĺ÷ŕňü, ÷ňî ó íŕń ÷ňî-ňî íĺ ďîëó÷ŕĺňń˙.<br />
+<div><span style="font-size:16px;">Ěű ďđоńňо нŕчčнŕĺě зŕěĺчŕňь, чňо у нŕń чňо-ňо нĺ ďолучŕĺňń˙.<br />
 <br />
-Ýňî ęŕę ó ęîěďüţňĺđŕ, ęîňîđűé ńî âđĺěĺíĺě íŕ÷číŕĺň ňîđěîçčňü âńĺ áîëüřĺ č áîëüřĺ, ďîňîěó ÷ňî íŕęŕďëčâŕĺň îřčáęč ńčńňĺěű, íî çŕěĺ÷ŕĺřü ýňî ňîëüęî ęîăäŕ îí ńňŕíîâčňń˙ ńîâńĺě ěĺäëĺííűé.</span></div>
+Эňо ęŕę у ęоěďьţňĺđŕ, ęоňоđűй ńо вđĺěĺнĺě нŕчčнŕĺň ňоđěозčňь вńĺ больřĺ č больřĺ, ďоňоěу чňо нŕęŕďлčвŕĺň оřčбęč ńčńňĺěű, но зŕěĺчŕĺřь эňо ňольęо ęоăдŕ он ńňŕновčňń˙ ńовńĺě ěĺдлĺннűй.</span></div>
 
 <div><span style="font-size:16px;">  </span></div>
 
@@ -115,7 +115,7 @@ body {
 
 <div></div>
 
-<div><span style="font-size:16px;">Ę ń÷ŕńňüţ, ÷ĺëîâĺęó íĺ íóćíî ďĺđĺóńňŕíŕâëčâŕňü windows äóřó. </span></div>
+<div><span style="font-size:16px;">Ę ńчŕńňьţ, чĺловĺęу нĺ нуćно ďĺđĺуńňŕнŕвлčвŕňь windows дуřу. </span></div>
 
 <div><span style="font-size:16px;">  </span></div>
 
@@ -123,7 +123,7 @@ body {
 
 <div></div>
 
-<div><span style="font-size:16px;">Äîńňŕňî÷íî ďđîńňî ďî÷čńňčňü «îřčáęč ńčńňĺěű».</span></div>
+<div><span style="font-size:16px;">Доńňŕňочно ďđоńňо ďочčńňčňь «оřčбęč ńčńňĺěű».</span></div>
 
 <div><span style="font-size:16px;">  </span></div>
 
@@ -131,7 +131,7 @@ body {
 
 <div></div>
 
-<div><span style="font-size:16px;">Íî ńíŕ÷ŕëŕ čő íóćíî íŕéňč.</span></div>
+<div><span style="font-size:16px;">Но ńнŕчŕлŕ čő нуćно нŕйňč.</span></div>
 
 <div><span style="font-size:16px;">  </span></div>
 
@@ -139,7 +139,7 @@ body {
 
 <div></div>
 
-<div><span style="font-size:16px;">Č ňĺőíčęîé, ń ďîěîůüţ ęîňîđîé âű ńěîćĺňĺ ýňî ńäĺëŕňü, ˙ ďîäĺëţńü âŕěč â ýňîň ÷ĺňâĺđă íŕ áĺńďëŕňíîě âĺáčíŕđĺ:</span></div>
+<div><span style="font-size:16px;">Č ňĺőнčęой, ń ďоěоůьţ ęоňоđой вű ńěоćĺňĺ эňо ńдĺлŕňь, ˙ ďодĺлţńь вŕěč в эňоň чĺňвĺđă нŕ бĺńďлŕňноě вĺбčнŕđĺ:</span></div>
 
 <div>  </div>
 
@@ -157,7 +157,7 @@ body {
 
 <div style="color: rgb(38, 38, 38); font-size: 16px; background-color: rgb(255, 255, 255);"></div>
 
-<h2 style="color: rgb(38, 38, 38); font-size: 16px; background-color: rgb(255, 255, 255);"><span style="color: rgb(38, 38, 38); font-size: 26px; text-align: center; background-color: rgb(255, 255, 255);">                                 </span><span style="font-size:26px;">Â ďđîăđŕěěĺ:</span></h2>
+<h2 style="color: rgb(38, 38, 38); font-size: 16px; background-color: rgb(255, 255, 255);"><span style="color: rgb(38, 38, 38); font-size: 26px; text-align: center; background-color: rgb(255, 255, 255);">                                 </span><span style="font-size:26px;">В ďđоăđŕěěĺ:</span></h2>
 
 <div></div>
 
@@ -166,17 +166,17 @@ body {
 <div></div>
 
 <div><img alt="" src="img/2.png" style="font-size: 14px; float: right; width: 300px; height: 231px; background-color: rgb(255, 255, 255);" />
-<p><span style="font-size:16px;">1. <span style="color:#0099ff;">Ęŕęčĺ ďńčőîëîăč÷ĺńęčĺ «ňîđěîçŕ» ěĺřŕţň ëč÷íî âŕě </span><span style="text-indent: 0em;">áűňü ýôôĺęňčâíűě č äîńňčăŕňü ńâîčő öĺëĺé? Ňĺőíčęŕ ńŕěîäčŕăíîńňčęč.  </span></span></p>
+<p><span style="font-size:16px;">1. <span style="color:#0099ff;">Ęŕęčĺ ďńčőолоăčчĺńęčĺ «ňоđěозŕ» ěĺřŕţň лčчно вŕě </span><span style="text-indent: 0em;">бűňь эффĺęňčвнűě č доńňčăŕňь ńвоčő цĺлĺй? Ňĺőнčęŕ ńŕěодčŕăноńňčęč.  </span></span></p>
 
 <div>
-<div><span style="font-size:16px;">2. <span style="color:#0099ff;">«Ňđĺóăîëüíčę íĺóäŕ÷» — ęŕę čç íĺăî âűáđŕňüń˙?</span> Č ďî÷ĺěó âń˙ ýňŕ ôčăí˙ ń íŕěč ýňî ďđîčńőîäčň?</span></div>
+<div><span style="font-size:16px;">2. <span style="color:#0099ff;">«Ňđĺуăольнčę нĺудŕч» — ęŕę čз нĺăо вűбđŕňьń˙?</span> Č ďочĺěу вń˙ эňŕ фčăн˙ ń нŕěč эňо ďđоčńőодčň?</span></div>
 
 <div><br />
-<span style="font-size:16px;">3. <span style="color:#0099ff;">Ď˙ňü ďđŕâčë óńďĺőŕ, ęîňîđűě</span> ńëĺäóţň ňĺ, ó ęîăî ďîëó÷ŕĺňń˙, č </span></div>
+<span style="font-size:16px;">3. <span style="color:#0099ff;">Ď˙ňь ďđŕвčл уńďĺőŕ, ęоňоđűě</span> ńлĺдуţň ňĺ, у ęоăо ďолучŕĺňń˙, č </span></div>
 
 <div></div>
 
-<div><span style="font-size:16px;">ęîňîđűĺ ńčńňĺěŕňč÷ĺńęč íŕđóřŕţň ňĺ, ęîěó «íĺ âĺçĺň».</span></div>
+<div><span style="font-size:16px;">ęоňоđűĺ ńčńňĺěŕňčчĺńęč нŕđуřŕţň ňĺ, ęоěу «нĺ вĺзĺň».</span></div>
 
 <div><span style="font-size:16px;">  </span></div>
 
@@ -184,7 +184,7 @@ body {
 
 <div></div>
 
-<div><span style="font-size:16px;">4. <span style="color:#0099ff;">Ń ÷ĺăî ďđŕâčëüíî íŕ÷číŕňü čçěĺíĺíč˙? </span>Ĺńëč âű đĺřčëč čçěĺíčňü ńâîţ ćčçíü, âűđâŕňüń˙ čç «áîëîňŕ» č óńňđĺěčňüń˙ íŕâńňđĺ÷ó ńâîĺé ěĺ÷ňĺ — ń ÷ĺăî ďđŕâčëüíî íŕ÷ŕňü, ÷ňîáű âńĺ ďîëó÷čëîńü?</span></div>
+<div><span style="font-size:16px;">4. <span style="color:#0099ff;">Ń чĺăо ďđŕвčльно нŕчčнŕňь čзěĺнĺнč˙? </span>Ĺńлč вű đĺřčлč čзěĺнčňь ńвоţ ćčзнь, вűđвŕňьń˙ čз «болоňŕ» č уńňđĺěčňьń˙ нŕвńňđĺчу ńвоĺй ěĺчňĺ — ń чĺăо ďđŕвčльно нŕчŕňь, чňобű вńĺ ďолучčлоńь?</span></div>
 
 <div></div>
 
@@ -209,7 +209,7 @@ body {
 <div style="color: rgb(38, 38, 38); font-size: 16px; background-color: rgb(255, 255, 255);"></div>
 
 <div style="color: rgb(38, 38, 38); font-size: 16px; background-color: rgb(255, 255, 255);">
-<p><span style="font-size:16px;"><span style="color: rgb(38, 38, 38); background-color: rgb(255, 255, 255);"><font style="font-size: 16px;"><span style="font-weight: bold;">P.S.</span> Ďđčăîňîâüňĺ đó÷ęó č áóěŕăó, ńäĺëŕĺě ňĺőíčęó ďđ˙ěî â őîäĺ âĺáčíŕđŕ.</font></span></span></p>
+<p><span style="font-size:16px;"><span style="color: rgb(38, 38, 38); background-color: rgb(255, 255, 255);"><font style="font-size: 16px;"><span style="font-weight: bold;">P.S.</span> Ďđčăоňовьňĺ đучęу č буěŕăу, ńдĺлŕĺě ňĺőнčęу ďđ˙ěо в őодĺ вĺбčнŕđŕ.</font></span></span></p>
 
 <p></p>
 
@@ -217,7 +217,7 @@ body {
 
 <div style="color: rgb(38, 38, 38); font-size: 16px; background-color: rgb(255, 255, 255);"></div>
 
-<div style="color: rgb(38, 38, 38); font-size: 16px; background-color: rgb(255, 255, 255);"><span style="font-size:16px;"><span style="font-style: italic;">Ń óâŕćĺíčĺě, Ĺăîđ Áóëűăčí</span></span></div>
+<div style="color: rgb(38, 38, 38); font-size: 16px; background-color: rgb(255, 255, 255);"><span style="font-size:16px;"><span style="font-style: italic;">Ń увŕćĺнčĺě, Ĺăоđ Булűăčн</span></span></div>
 </div>
 
 <div style="color: rgb(38, 38, 38); font-size: 16px; background-color: rgb(255, 255, 255);"></div>
@@ -252,13 +252,13 @@ body {
 <p></p>
 
 <p></p>
-</span><p><a href=indexba0c.html?id=F4DF9 class=slink>web-âĺđńč˙</a><br><a href=index.html class=slink>íŕ ăëŕâíóţ</a><p><hr>
+</span><p><a href=indexba0c.html?id=F4DF9 class=slink>web-вĺđńč˙</a><br><a href=index.html class=slink>нŕ ăлŕвнуţ</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ďí-Ďň ń 10 äî 19<br/>
-Ěîńęâŕ, Ďđîńďĺęň Ěčđŕ, 68ń1, îôčń 212</span>
++7 (495) 772-68-73</span>   Ďн-Ďň ń 10 до 19<br/>
+Ěоńęвŕ, Ďđоńďĺęň Ěčđŕ, 68ń1, офčń 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -319,7 +319,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Ęîä đĺňŕđăĺňčíăŕ adroll -->
+<!-- Ęод đĺňŕđăĺňčнăŕ adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -341,7 +341,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáŕâčňü ěĺňęč ę ńńűëęŕě -->
+<!-- добŕвčňь ěĺňęč ę ńńűлęŕě -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
