--- a/printbb23.html
+++ b/printbb23.html
@@ -2,7 +2,7 @@
 <title>Баланс, конгруэнтность и Новый Код НЛП</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=48E9829C-F45C2-708282EF by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:09:43 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='новый код нлп, нлп'>
 <meta name="description" content='Чему учит Новый Код НЛП на самом деле.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
