--- a/printbbf6.html
+++ b/printbbf6.html
@@ -2,7 +2,7 @@
 <title>Чтобы управлять людьми нужно уметь управлять собой</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=1C368FFE-F42BD-D759686C by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:29:33 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='нлп'>
 <meta name="description" content='Почему? Два момента...'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
