--- a/printbccf.html
+++ b/printbccf.html
@@ -2,7 +2,7 @@
 <title>НЛП и манипуляция-2. Системные эффекты.</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=4CB11EBD-F4293-EE59CE62 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:28:20 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='нлп'>
 <meta name="description" content='И как теперь нам с этим жить? Экология манипуляции.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
