--- a/printbeb8.html
+++ b/printbeb8.html
@@ -1,10 +1,10 @@
 <html>
-<title>Õîðîøèé äðóã - ïëîõîé äèðåêòîð. Êàê ñîâìåñòèòü è òî, è òî?</title>
+<title>Хороший друг - плохой директор. Как совместить и то, и то?</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4A88 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:04:15 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
-<meta name="description" content='Êàê òîëüêî Âû íà÷èíàåòå çàíèìàòüñÿ áèçíåñîì èëè ïðîäàæàìè, Âû ïîïàäàåòå â êëàññè÷åñêóþ äèëåììó Ëèäåðà: «Áûòü õîðîøèì ÷åëîâåêîì èëè ýôôåêòèâíî óïðàâëÿòü?».  Êàê âûéòè èç ýòîé äèëåììû è ñîâìåñòèòü è òî, è òî?'>
+<meta name="description" content='Как только Вы начинаете заниматься бизнесом или продажами, Вы попадаете в классическую дилемму Лидера: «Быть хорошим человеком или эффективно управлять?».  Как выйти из этой дилеммы и совместить и то, и то?'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
 <!--
@@ -14,36 +14,36 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Õîðîøèé äðóã - ïëîõîé äèðåêòîð. Êàê ñîâìåñòèòü è òî, è òî?</h1><a href=indexbeb8.html?id=F4A88 class=slink>web-âåðñèÿ</a><p><span class='print'><p>
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Хороший друг - плохой директор. Как совместить и то, и то?</h1><a href=indexbeb8.html?id=F4A88 class=slink>web-версия</a><p><span class='print'><p>
 	&nbsp;</p>
 <p>
 	<a href="img/art/spiral%20dinamika%20open.png" target="_blank"><img alt="" src="img/art/spiral%20dinamika%20200.png" style="width: 200px; height: 242px; float: left;" /></a></p>
 <p>
-	Êàê òîëüêî Âû íà÷èíàåòå çàíèìàòüñÿ áèçíåñîì èëè ïðîäàæàìè, Âû ïîïàäàåòå â êëàññè÷åñêóþ äèëåììó Ëèäåðà: &laquo;áûòü õîðîøèì ÷åëîâåêîì èëè ýôôåêòèâíî óïðàâëÿòü?&raquo;</p>
+	Как только Вы начинаете заниматься бизнесом или продажами, Вы попадаете в классическую дилемму Лидера: &laquo;быть хорошим человеком или эффективно управлять?&raquo;</p>
 <p>
 	&nbsp;</p>
 <p>
-	×òîáû óïðàâëÿòü è ïðîäàâàòü ïðèõîäèòñÿ áûòü æåñòêèì è, ïîðîé, ñîâåðøåííî íå ãóìàííûì. Ñòàíîâèøüñÿ äîáðûì è ÷åëîâå÷íûì - ïðîäàæè ïàäàþò, à óïðàâëåí÷åñêèå ðû÷àãè ïåðåñòàþò ðàáîòàòü.</p>
+	Чтобы управлять и продавать приходится быть жестким и, порой, совершенно не гуманным. Становишься добрым и человечным - продажи падают, а управленческие рычаги перестают работать.</p>
 <p>
 	&nbsp;</p>
 <p>
-	È, ïîðîé, ýòî íàñòîëüêî îáîñòðÿåòñÿ, ÷òî ïðèõîäèòñÿ äåëàòü æåñòîêèé âûáîð... Ó Òðàóòà áûëà çàìå÷àòåëüíàÿ öèòàòà: &quot;Ëèáî òû áóäåøü êàòêîì, ëèáî ñòàíåøü ÷àñòüþ äîðîãè&quot;. È òóò îäíè Ëèäåðû ñëèâàþòñÿ èç ëèäåðîâ, à äðóãèå &quot;ïðèíèìàþò ñòîðîíó òüìû&quot; ;)</p>
+	И, порой, это настолько обостряется, что приходится делать жестокий выбор... У Траута была замечательная цитата: &quot;Либо ты будешь катком, либо станешь частью дороги&quot;. И тут одни Лидеры сливаются из лидеров, а другие &quot;принимают сторону тьмы&quot; ;)</p>
 <p>
 	&nbsp;</p>
 <p>
-	Íî â ðåàëüíîñòè ýòîé äèëåììû íåò. Îíà ñóùåñòâóåò òîëüêî ïîêà Âû èùåòå ðåøåíèå â ïëîñêîñòè ðåøåíèé îäíîãî óðîâíÿ. À êàê òîëüêî ó Âàñ ïîÿâëÿåòñÿ âåðòèêàëü âñåõ ñåìè óðîâíåé ìûøëåíèé, Âû ïîëó÷àåòå â ñâîè ðóêè ñèñòåìíûé ïîäõîä ê óïðàâëåíèþ. È âñå òî, ÷òî ðàíüøå êîíôëèêòîâàëî â îòíîøåíèÿõ ìåæäó ëþäüìè (èëè ìåæäó ëþäüìè è áèçíåñîì) îáðåòàåò ìíîæåñòâî ãèáêèõ ðåøåíèé.</p>
+	Но в реальности этой дилеммы нет. Она существует только пока Вы ищете решение в плоскости решений одного уровня. А как только у Вас появляется вертикаль всех семи уровней мышлений, Вы получаете в свои руки системный подход к управлению. И все то, что раньше конфликтовало в отношениях между людьми (или между людьми и бизнесом) обретает множество гибких решений.</p>
 <p>
 	&nbsp;</p>
 <p>
-	×òîáû îáúÿñíèòü, êàê ýòî ðàáîòàåò, íóæíî õîòÿáû â êðàòöå îáúÿñíèòü ìîäåëü Ñïèðàëüíîé Äèíàìèêè.</p>
+	Чтобы объяснить, как это работает, нужно хотябы в кратце объяснить модель Спиральной Динамики.</p>
 <p>
-	Ýòîìó è áóäåò ïîñâÿùåí ìàñòåð-êëàññ &quot;<a href="index13cd.html?id=7-leaders-dragons" target="_blank">7 âíóòðåííèõ äðàêîíîâ Ëèäåðà</a>&quot; <strong><span style="color: rgb(255, 0, 0);">19 îêòÿáðÿ</span></strong>.</p>
+	Этому и будет посвящен мастер-класс &quot;<a href="index13cd.html?id=7-leaders-dragons" target="_blank">7 внутренних драконов Лидера</a>&quot; <strong><span style="color: rgb(255, 0, 0);">19 октября</span></strong>.</p>
 <p>
-	Ïðèõîäèòå, ýòî çíàíèå ñòîèò Âàøåãî âðåìåíè, òåì áîëåå, ÷òî ïëàòà çà íåãî ÷èñòî ñèìâîëè÷åñêàÿ.</p>
+	Приходите, это знание стоит Вашего времени, тем более, что плата за него чисто символическая.</p>
 <p>
-	Åãîð Áóëûãèí</p>
+	Егор Булыгин</p>
 <p>
-	17 îêòÿáðÿ 2011ã.</p>
+	17 октября 2011г.</p>
 <p>
 	<a name='vote'></a><script type='text/javascript'>
 function light(num){
@@ -67,16 +67,16 @@ function voted(){
 }
 </script>
     <div class='mark' style='white-space: nowrap; width: 208px; overflow: hidden; float: left;'>
-    <div class='service'>Îöåíèòü:</div>
+    <div class='service'>Оценить:</div>
     <div class='stars' id='stars'>
-    <a href='setup1a78.html?id=F4A88&amp;vote=1&amp;close=1' target='_blank' title='Óæàñíî!'><div class='' id='star1' onmouseover='light(1)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setupcd3a.html?id=F4A88&amp;vote=2&amp;close=1' target='_blank' title='Ïëîõî'><div class='' id='star2' onmouseover='light(2)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setupeb1e.html?id=F4A88&amp;vote=3&amp;close=1' target='_blank' title='Ñðåäíå'><div class='' id='star3' onmouseover='light(3)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup2607.html?id=F4A88&amp;vote=4&amp;close=1' target='_blank' title='Õîðîøî'><div class='' id='star4' onmouseover='light(4)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setupe683.html?id=F4A88&amp;vote=5&amp;close=1' target='_blank' title='Îòëè÷íî!'><div class='' id='star5' onmouseover='light(5)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup1a78.html?id=F4A88&amp;vote=1&amp;close=1' target='_blank' title='Ужасно!'><div class='' id='star1' onmouseover='light(1)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setupcd3a.html?id=F4A88&amp;vote=2&amp;close=1' target='_blank' title='Плохо'><div class='' id='star2' onmouseover='light(2)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setupeb1e.html?id=F4A88&amp;vote=3&amp;close=1' target='_blank' title='Средне'><div class='' id='star3' onmouseover='light(3)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup2607.html?id=F4A88&amp;vote=4&amp;close=1' target='_blank' title='Хорошо'><div class='' id='star4' onmouseover='light(4)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setupe683.html?id=F4A88&amp;vote=5&amp;close=1' target='_blank' title='Отлично!'><div class='' id='star5' onmouseover='light(5)' onmouseout='delight()' onclick='voted()'></div></a>
     </div>
     <div class='line' id='line'></div>
-    <div id='thanks' style='display: none; float: left; padding-top: 5px;'>Ñïàñèáî!</div>
+    <div id='thanks' style='display: none; float: left; padding-top: 5px;'>Спасибо!</div>
     </div> <div style='padding-top: 10px;'><!-- AddThis Button BEGIN -->
 <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
 <a class="addthis_button_facebook"></a>
@@ -99,7 +99,7 @@ function voted(){
 
 <script type="text/javascript">var addthis_config = {"data_track_clickback":true};</script>
 <script type="text/javascript" src="../s7.addthis.com/js/250/addthis_widget.js#pubid=nlping"></script>
-<!-- AddThis Button END --></div> <div class='relateditems'><p>Ëó÷øèå ìàòåðèàëû ðàçäåëà &quot;Áèçíåñ, ìàðêåòèíã è ïðîäàæè&quot;</p> <ul><li><a href='F4AF2.html' title='Óïðàæíåíèå, ïîçâîëÿþùåå îïðåäåëèòü âàøó íèøó, óâèäåòü âàøåãî êëèåíòà è ñïîñîáû åãî ïðèâëå÷åíèÿ'>Âàø Áîá</a></li><li><a href='F48AF.html' title='Ïðî îäèí èç ãëàâíûõ íàâûêîâ áèçíåñ-ìûøëåíèÿ, êîòîðûé íå òîëüêî äåëàåò íàøè äåéñòâèÿ íà ïîðÿäîê ýôôåêòèâíåå, íî è âûâîäèò íà íîâûé óðîâåíü çðåëîñòè.'>Õîòèòå ëó÷øèõ ðåçóëüòàòîâ? Ìûñëèòå ïðîåêòàìè!</a></li><li><a href='F4CE5.html' title=''>Ñàìûå ïîêóïàåìûå òåìû 2012<br/> (ñòàòèñòèêà ðàñïðîäàæè)</a></li><li><a href='F4C29.html' title='Ìîæíî âîñïðèíÿòü ýòó ñòàòüþ êàê øóòêó, à ìîæíî è êîå-÷òî ïîëåçíîå äëÿ ñåáÿ óçàòü ;) Íàïèøèòå, ïîæàëóéñòà, â êîììåíòàðèÿõ íàèáîëåå èíòåðåñíûå âàì òåìû (êàêîé òðåíèíã âû êóïèëè áû), èëè ïðèäóìàéòå ñâîþ òåìó. Òàêæå, ïðî÷èòàéòå ÷óæèå êîììåíòàðèè, è åñëè âàøà òåìà ñîâïàäàåò ñ ÷üåé-òî, òî ïîñòàâüòå êîììåíòàðèþ Ëàéê.'>Òåìû òðåíèíãîâ, ìîçãîâîé øòóðì</a></li><li><a href='F4A29.html' title='Áåç ÷åãî íå îáîéòèñü â ïîñòðîåíèè ïðèáûëüíîãî áèçíåñà? Ðå÷ü ïîéäåò íå òîëüêî î íîâè÷êàõ â ìàëîì áèçíåñå...'>Áàçîâûå ôàêòîðû óñïåøíîãî ìàðêåòèíãà</a></li></ul></div> 
+<!-- AddThis Button END --></div> <div class='relateditems'><p>Лучшие материалы раздела &quot;Бизнес, маркетинг и продажи&quot;</p> <ul><li><a href='F4AF2.html' title='Упражнение, позволяющее определить вашу нишу, увидеть вашего клиента и способы его привлечения'>Ваш Боб</a></li><li><a href='F48AF.html' title='Про один из главных навыков бизнес-мышления, который не только делает наши действия на порядок эффективнее, но и выводит на новый уровень зрелости.'>Хотите лучших результатов? Мыслите проектами!</a></li><li><a href='F4CE5.html' title=''>Самые покупаемые темы 2012<br/> (статистика распродажи)</a></li><li><a href='F4C29.html' title='Можно воспринять эту статью как шутку, а можно и кое-что полезное для себя узать ;) Напишите, пожалуйста, в комментариях наиболее интересные вам темы (какой тренинг вы купили бы), или придумайте свою тему. Также, прочитайте чужие комментарии, и если ваша тема совпадает с чьей-то, то поставьте комментарию Лайк.'>Темы тренингов, мозговой штурм</a></li><li><a href='F4A29.html' title='Без чего не обойтись в построении прибыльного бизнеса? Речь пойдет не только о новичках в малом бизнесе...'>Базовые факторы успешного маркетинга</a></li></ul></div> 
 <script>
 var idcomments_acct = '17aaea12c8826f1a4adde6fd2173ce48';
 var idcomments_post_id = 'F4A88';
@@ -125,22 +125,22 @@ var idcomments_post_url = 'F4A88.html';
 		  fjs.parentNode.insertBefore(js, fjs);
 		}(document, 'script', 'facebook-jssdk'));</script>
 
-<h3>Êîììåíòàðèè Facebook</h3>
+<h3>Комментарии Facebook</h3>
 <div id="fb-root"></div>
 <div class="fb-comments" data-href="http://nlping.ru/F4A88" data-num-posts="100" data-width="600"></div>
 
-<h3>Êîììåíòàðèè Âêîíòàêòå</h3>
+<h3>Комментарии Вконтакте</h3>
 <div id="vk_comments"></div>
 <script type="text/javascript">
 VK.Widgets.Comments("vk_comments", {limit: 100, width: "600", attach: false});
 </script></p>
-</span><p><a href=indexbeb8.html?id=F4A88 class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+</span><p><a href=indexbeb8.html?id=F4A88 class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -201,7 +201,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -223,7 +223,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
