--- a/printb162.html
+++ b/printb162.html
@@ -1,10 +1,10 @@
 <html>
-<title>Òàòüÿíà Åñèíà</title>
+<title>Татьяна Есина</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4DE7 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:09:20 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
-<meta name="description" content='Òðåíåðñêèé îïûò áîëåå 15 ëåò. Âíåäðåíèå âíóòðèêîðïîðàòèâíîãî îáó÷åíèÿ íà áàçå ðîçíè÷íîé ñåòè DîÌî, ÒÄ Çîëå (ðàçðàáîòêà ïðîãðàìì îáó÷åíèÿ ïåðñîíàëà, àòòåñòàöèîííûå ïðîöåäóðû).'>
+<meta name="description" content='Тренерский опыт более 15 лет. Внедрение внутрикорпоративного обучения на базе розничной сети DоМо, ТД Золе (разработка программ обучения персонала, аттестационные процедуры).'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
 <!--
@@ -14,18 +14,18 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Òàòüÿíà Åñèíà</h1><a href=indexb162.html?id=F4DE7 class=slink>web-âåðñèÿ</a><p><span class='print'><p><img alt="" src="img/esinawhite_fq6lpxk.jpg" style="width: 130px; height: 212px; float: left; margin-left: 10px; margin-right: 10px;" />Òðåíåðñêèé îïûò áîëåå 15 ëåò. Âíåäðåíèå âíóòðèêîðïîðàòèâíîãî îáó÷åíèÿ íà áàçå ðîçíè÷íîé ñåòè DîÌî, ÒÄ Çîëå (ðàçðàáîòêà ïðîãðàìì îáó÷åíèÿ ïåðñîíàëà, àòòåñòàöèîííûå ïðîöåäóðû).</p>
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Татьяна Есина</h1><a href=indexb162.html?id=F4DE7 class=slink>web-версия</a><p><span class='print'><p><img alt="" src="img/esinawhite_fq6lpxk.jpg" style="width: 130px; height: 212px; float: left; margin-left: 10px; margin-right: 10px;" />Тренерский опыт более 15 лет. Внедрение внутрикорпоративного обучения на базе розничной сети DоМо, ТД Золе (разработка программ обучения персонала, аттестационные процедуры).</p>
 
-<p>Êîíñóëüòèðóåò ïåðâûõ ëèö êîìïàíèé ïî âîïðîñàì óïðàâëåíèÿ îðãàíèçàöèåé.</p>
+<p>Консультирует первых лиц компаний по вопросам управления организацией.</p>
 
-<p>Àâòîð è âåäóùàÿ áîëåå 15 îáó÷àþùèõ ïðîãðàìì äëÿ ðóêîâîäèòåëåé è ñïåöèàëèñòîâ ïî îïåðàòèâíîìó ìåíåäæìåíòó, âçàèìîäåéñòâèþ ñ êëèåíòàìè, îáó÷åíèþ è ðàçâèòèþ ïåðñîíàëà. Ýêñïåðò ïî îöåíêå óðîâíÿ ðàçâèòèÿ óïðàâëåí÷åñêèõ íàâûêîâ íà îñíîâå ìîäåëè êîìïåòåíöèè (òåõíîëîãèÿ Assessment-öåíòð).</p>
-</span><p><a href=indexb162.html?id=F4DE7 class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+<p>Автор и ведущая более 15 обучающих программ для руководителей и специалистов по оперативному менеджменту, взаимодействию с клиентами, обучению и развитию персонала. Эксперт по оценке уровня развития управленческих навыков на основе модели компетенции (технология Assessment-центр).</p>
+</span><p><a href=indexb162.html?id=F4DE7 class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -86,7 +86,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -108,7 +108,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
