--- a/printb3f0.html
+++ b/printb3f0.html
@@ -1,10 +1,10 @@
 <html>
-<title>Òåñò ïî Ñïèðàëüíîé Äèíàìèêå</title>
+<title>Тест по Спиральной Динамике</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=8C9BD84D-F4677-465F001F by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:00:00 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
-<meta name="keywords" content='ñïèðàëüíàÿ äèíàìèêà'>
-<meta name="description" content='Òåñò èç 30 âîïðîñîâ (ññûëêà).'>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="keywords" content='спиральная динамика'>
+<meta name="description" content='Тест из 30 вопросов (ссылка).'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
 <!--
@@ -14,13 +14,13 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Òåñò ïî Ñïèðàëüíîé Äèíàìèêå</h1><a href=indexb3f0.html?id=8C9BD84D-F4677-465F001F class=slink>web-âåðñèÿ</a><p><span class='print'><P>Ïîÿâèëñÿ òåñò ïî Ñïèðàëüíîé Äèíàìèêå íà ðóññêîì ÿçûêå. Ñ åãî ïîìîùüþ âû ìîæåòå ïîëó÷èòü ïðåäñòàâëåíèå î ñâîåì öåííîñòíîì ïðîôèëå. Äëÿ íàèáîëüøåé îáúåêòèâíîñòè òåñòà ïðîõîäèòü åãî ëó÷øå äî äåòàëüíîãî èçó÷åíèÿ ìàòåðèàëîâ ïî Ñïèðàëüíîé äèíàìèêå.</P>
-<P>Òåñò ðàñïîëîæåí íà ñàéòå <A href="http://www.jobexec.com/" target=_blank>jobexec.com</A>. Îí ñîñòîèò èç 30 âîïðîñîâ è&nbsp;ïîòðåáóåò&nbsp;îêîëî ïîëó÷àñà âðåìåíè. Äëÿ åãî ïðîõîæäåíèÿ íóæíî çàðåãèñòðèðîâàòüñÿ&nbsp;è ïîëó÷èòü ëîãèí è ïàðîëü íà å-ìåéë.&nbsp;Ñàéò íà àíãëèéñêîì ÿçûêå, íî åñòü ðóññêàÿ âåðñèÿ ñàéòà è òåñòà. ×òîáû íà íåå ïîïàñòü, ñëåäóéòå øàãàì:</P>
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Тест по Спиральной Динамике</h1><a href=indexb3f0.html?id=8C9BD84D-F4677-465F001F class=slink>web-версия</a><p><span class='print'><P>Появился тест по Спиральной Динамике на русском языке. С его помощью вы можете получить представление о своем ценностном профиле. Для наибольшей объективности теста проходить его лучше до детального изучения материалов по Спиральной динамике.</P>
+<P>Тест расположен на сайте <A href="http://www.jobexec.com/" target=_blank>jobexec.com</A>. Он состоит из 30 вопросов и&nbsp;потребует&nbsp;около получаса времени. Для его прохождения нужно зарегистрироваться&nbsp;и получить логин и пароль на е-мейл.&nbsp;Сайт на английском языке, но есть русская версия сайта и теста. Чтобы на нее попасть, следуйте шагам:</P>
 <OL>
-<LI>Íà âõîäíîé ñòðàíèöå ñàéòà íàæìèòå íà êíîïêó "JobEQ",&nbsp;</LI>
-<LI>Íà ñëåäóþùåé ñòðàíèöå âûáåðèòå â ïðàâîì âåðõíåì ìåíþ ñàéòà "Test Yourself", </LI>
-<LI>Íà ñëåäóþùåé ñòðàíèöå, â ïîÿâèâøåìñÿ ââåðõó ìåíþ ÿçûêîâ âûáåðèòå "Ðóññêèé".</LI></OL>
-<P>Óñïåøíîé ðàáîòû!</P>
+<LI>На входной странице сайта нажмите на кнопку "JobEQ",&nbsp;</LI>
+<LI>На следующей странице выберите в правом верхнем меню сайта "Test Yourself", </LI>
+<LI>На следующей странице, в появившемся вверху меню языков выберите "Русский".</LI></OL>
+<P>Успешной работы!</P>
 <P align=center><FONT face=Verdana size=2><a name='vote'></a><script type='text/javascript'>
 function light(num){
     if(num >= 1) document.getElementById('star1').className = 'active';
@@ -43,16 +43,16 @@ function voted(){
 }
 </script>
     <div class='mark' style='white-space: nowrap; width: 208px; overflow: hidden; float: left;'>
-    <div class='service'>Îöåíèòü:</div>
+    <div class='service'>Оценить:</div>
     <div class='stars' id='stars'>
-    <a href='setupc919.html?id=8C9BD84D-F4677-465F001F&amp;vote=1&amp;close=1' target='_blank' title='Óæàñíî!'><div class='' id='star1' onmouseover='light(1)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup8b45.html?id=8C9BD84D-F4677-465F001F&amp;vote=2&amp;close=1' target='_blank' title='Ïëîõî'><div class='' id='star2' onmouseover='light(2)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setupec0b.html?id=8C9BD84D-F4677-465F001F&amp;vote=3&amp;close=1' target='_blank' title='Ñðåäíå'><div class='' id='star3' onmouseover='light(3)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup9ef8.html?id=8C9BD84D-F4677-465F001F&amp;vote=4&amp;close=1' target='_blank' title='Õîðîøî'><div class='' id='star4' onmouseover='light(4)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setupba2e.html?id=8C9BD84D-F4677-465F001F&amp;vote=5&amp;close=1' target='_blank' title='Îòëè÷íî!'><div class='' id='star5' onmouseover='light(5)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setupc919.html?id=8C9BD84D-F4677-465F001F&amp;vote=1&amp;close=1' target='_blank' title='Ужасно!'><div class='' id='star1' onmouseover='light(1)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup8b45.html?id=8C9BD84D-F4677-465F001F&amp;vote=2&amp;close=1' target='_blank' title='Плохо'><div class='' id='star2' onmouseover='light(2)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setupec0b.html?id=8C9BD84D-F4677-465F001F&amp;vote=3&amp;close=1' target='_blank' title='Средне'><div class='' id='star3' onmouseover='light(3)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup9ef8.html?id=8C9BD84D-F4677-465F001F&amp;vote=4&amp;close=1' target='_blank' title='Хорошо'><div class='' id='star4' onmouseover='light(4)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setupba2e.html?id=8C9BD84D-F4677-465F001F&amp;vote=5&amp;close=1' target='_blank' title='Отлично!'><div class='' id='star5' onmouseover='light(5)' onmouseout='delight()' onclick='voted()'></div></a>
     </div>
     <div class='line' id='line'></div>
-    <div id='thanks' style='display: none; float: left; padding-top: 5px;'>Ñïàñèáî!</div>
+    <div id='thanks' style='display: none; float: left; padding-top: 5px;'>Спасибо!</div>
     </div> <div style='padding-top: 10px;'><!-- AddThis Button BEGIN -->
 <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
 <a class="addthis_button_facebook"></a>
@@ -75,12 +75,12 @@ function voted(){
 
 <script type="text/javascript">var addthis_config = {"data_track_clickback":true};</script>
 <script type="text/javascript" src="../s7.addthis.com/js/250/addthis_widget.js#pubid=nlping"></script>
-<!-- AddThis Button END --></div> <div class='relateditems'><p>Ëó÷øèå ìàòåðèàëû ðàçäåëà &quot;Ñïèðàëüíàÿ Äèíàìèêà&quot;</p> <ul><li><a href='EEB0610A-F4676-998B3D10.html' title='Êîðåëëÿöèÿ Ñïèðàëüíîé Äèíàìèêè è ñòàäèé ðàçâèòèÿ Ýãî.'>AQAL: Ñïèðàëüíàÿ Äèíàìèêà è ñòàäèè ðàçâèòèÿ Ýãî</a></li><li><a href='F5576ACF-F4601-3A7A13DF.html' title='Êðàòêàÿ õàðàêòåðèñòèêà êàæäîãî óðîâíÿ Ñïèðàëüíîé Äèíàìèêè â ïîíèìàíèè Ãðýéâçà.'>Òèïîëîãèÿ ñèñòåì öåííîñòåé Êëýðà Ãðåéâçà</a></li><li><a href='D7190801-F4634-0E7186CF.html' title='Ýòàïû èçìåíåíèé, ÷åðåç êîòîðûå ïðîõîäèò ñèñòåìà, è 6 óñëîâèé, íåîáõîäèìûõ äëÿ óñïåøíûõ èçìåíåíèé.'>Óïðàâëåíèå èçìåíåíèÿìè ìåòîäàìè Ñïèðàëüíîé Äèíàìèêè</a></li><li><a href='F4759.html' title='Ëåêöèÿ ïî Ñïèðàëüíîé Äèíàìèêå. ×èòàåò Àëåêñåé Êàïòåðåâ.'>Ëåêöèÿ ïî Ñïèðàëüíîé Äèíàìèêå</a></li><li><a href='432CBFC3-F44FD-314CDA54.html' title='Êðàòêàÿ îçíàêîìèòåëüíàÿ ñòàòüÿ Àëåêñåÿ Êàïòåðåâà.'>Ýâîëþöèÿ öåííîñòåé: Òåîðèÿ Ãðýéâñà è Ñïèðàëüíàÿ äèíàìèêà</a></li></ul></div> 
-<h3>Êîììåíòàðèè Facebook</h3>
+<!-- AddThis Button END --></div> <div class='relateditems'><p>Лучшие материалы раздела &quot;Спиральная Динамика&quot;</p> <ul><li><a href='EEB0610A-F4676-998B3D10.html' title='Корелляция Спиральной Динамики и стадий развития Эго.'>AQAL: Спиральная Динамика и стадии развития Эго</a></li><li><a href='F5576ACF-F4601-3A7A13DF.html' title='Краткая характеристика каждого уровня Спиральной Динамики в понимании Грэйвза.'>Типология систем ценностей Клэра Грейвза</a></li><li><a href='D7190801-F4634-0E7186CF.html' title='Этапы изменений, через которые проходит система, и 6 условий, необходимых для успешных изменений.'>Управление изменениями методами Спиральной Динамики</a></li><li><a href='F4759.html' title='Лекция по Спиральной Динамике. Читает Алексей Каптерев.'>Лекция по Спиральной Динамике</a></li><li><a href='432CBFC3-F44FD-314CDA54.html' title='Краткая ознакомительная статья Алексея Каптерева.'>Эволюция ценностей: Теория Грэйвса и Спиральная динамика</a></li></ul></div> 
+<h3>Комментарии Facebook</h3>
 <div id="fb-root"></div>
 <div class="fb-comments" data-href="http://nlping.ru/8C9BD84D-F4677-465F001F" data-num-posts="100" data-width="600"></div>
 
-<h3>Êîììåíòàðèè Âêîíòàêòå</h3>
+<h3>Комментарии Вконтакте</h3>
 <div id="vk_comments"></div>
 <script type="text/javascript">
 VK.Widgets.Comments("vk_comments", {limit: 100, width: "600", attach: false});
@@ -103,13 +103,13 @@ VK.Widgets.Comments("vk_comments", {limit: 100, width: "600", attach: false});
     })();
 </script>
  </FONT> 
-</span><p><a href=indexb3f0.html?id=8C9BD84D-F4677-465F001F class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+</span><p><a href=indexb3f0.html?id=8C9BD84D-F4677-465F001F class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -170,7 +170,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -192,7 +192,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
