--- a/printb4fa.html
+++ b/printb4fa.html
@@ -1,9 +1,9 @@
 <html>
-<title>Êàê ýôôåêòèâíî ó÷èòüñÿ íà òðåíèíãàõ?</title>
+<title>Как эффективно учиться на тренингах?</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4ABE by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:05:24 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
-<meta name="keywords" content='Êàê ýôôåêòèâíî ó÷èòüñÿ íà òðåíèíãàõ ïîäêàñò'>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="keywords" content='Как эффективно учиться на тренингах подкаст'>
 <meta name="description" content=''>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
@@ -14,16 +14,16 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Êàê ýôôåêòèâíî ó÷èòüñÿ íà òðåíèíãàõ?</h1><a href=indexb4fa.html?id=F4ABE class=slink>web-âåðñèÿ</a><p><span class='print'><h3>
-	Êàê ýôôåêòèâíî ó÷èòüñÿ íà òðåíèíãàõ?</h3>
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Как эффективно учиться на тренингах?</h1><a href=indexb4fa.html?id=F4ABE class=slink>web-версия</a><p><span class='print'><h3>
+	Как эффективно учиться на тренингах?</h3>
 <p>
-	Íà æèâîì òðåíèíãå ýíåðãåòèêà ëó÷øå. Îäíîçíà÷íî. Ñóùåñòâóåò òàêîå ïîíÿòèå, êàê &quot;òðàíñïëàíòàöèÿ çíàíèé&quot; è î÷åíü áîëüøàÿ ðàçíèöà ìåæäó òåì, êàê âû îáó÷àåòåñü, ñëûøà ãîëîñ, ÷èòàÿ, ñìîòðÿ. Îá ýòîì è ìíîãîì äðóãîì ïîäðîáíåå â íàøåì êàñòå!</p>
+	На живом тренинге энергетика лучше. Однозначно. Существует такое понятие, как &quot;трансплантация знаний&quot; и очень большая разница между тем, как вы обучаетесь, слыша голос, читая, смотря. Об этом и многом другом подробнее в нашем касте!</p>
 <p style="text-align: center">
 	<object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" height="40" width="500"><param name="movie" value="http://bigpodcast.ru/?xmlURL=http%3A%2F%2Fs.rpod.ru%2Fxml%2Faudio%2Fa216202.xml" /><param name="allowfullscreen" value="true" /><param name="allowscriptaccess" value="always" /><embed allowfullscreen="true" allowscriptaccess="always" height="40" src="http://bigpodcast.ru/?xmlURL=http%3A%2F%2Fs.rpod.ru%2Fxml%2Faudio%2Fa216202.xml" type="application/x-shockwave-flash" width="500"></embed></object></p>
 <h3>
-	×òî ïðîèñõîäèò, åñëè êëèåíò íå ïëàòèò çà êîó÷èíã?</h3>
+	Что происходит, если клиент не платит за коучинг?</h3>
 <p>
-	Îòíîøåíèå ê òîìó, çà ÷òî ìû ïëàòèì, ñåðüåçíåé, ÷åì ê òîìó, ÷òî ìû ïîëó÷èëè äàðîì. Òàê óæ óñòðîåí ÷åëîâåê. Ïî÷åìó? Ïàðó ñëîâ îá ýòîì.</p>
+	Отношение к тому, за что мы платим, серьезней, чем к тому, что мы получили даром. Так уж устроен человек. Почему? Пару слов об этом.</p>
 <p style="text-align: center">
 	<object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" height="40" width="500"><param name="movie" value="http://bigpodcast.ru/?xmlURL=http%3A%2F%2Fs.rpod.ru%2Fxml%2Faudio%2Fa219004.xml" /><param name="allowfullscreen" value="true" /><param name="allowscriptaccess" value="always" /><embed allowfullscreen="true" allowscriptaccess="always" height="40" src="http://bigpodcast.ru/?xmlURL=http%3A%2F%2Fs.rpod.ru%2Fxml%2Faudio%2Fa219004.xml" type="application/x-shockwave-flash" width="500"></embed></object></p>
 <p>
@@ -49,16 +49,16 @@ function voted(){
 }
 </script>
     <div class='mark' style='white-space: nowrap; width: 208px; overflow: hidden; float: left;'>
-    <div class='service'>Îöåíèòü:</div>
+    <div class='service'>Оценить:</div>
     <div class='stars' id='stars'>
-    <a href='setup3019.html?id=F4ABE&amp;vote=1&amp;close=1' target='_blank' title='Óæàñíî!'><div class='' id='star1' onmouseover='light(1)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setupc418.html?id=F4ABE&amp;vote=2&amp;close=1' target='_blank' title='Ïëîõî'><div class='' id='star2' onmouseover='light(2)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup3ba5.html?id=F4ABE&amp;vote=3&amp;close=1' target='_blank' title='Ñðåäíå'><div class='' id='star3' onmouseover='light(3)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup47cb.html?id=F4ABE&amp;vote=4&amp;close=1' target='_blank' title='Õîðîøî'><div class='' id='star4' onmouseover='light(4)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup3ca6.html?id=F4ABE&amp;vote=5&amp;close=1' target='_blank' title='Îòëè÷íî!'><div class='' id='star5' onmouseover='light(5)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup3019.html?id=F4ABE&amp;vote=1&amp;close=1' target='_blank' title='Ужасно!'><div class='' id='star1' onmouseover='light(1)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setupc418.html?id=F4ABE&amp;vote=2&amp;close=1' target='_blank' title='Плохо'><div class='' id='star2' onmouseover='light(2)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup3ba5.html?id=F4ABE&amp;vote=3&amp;close=1' target='_blank' title='Средне'><div class='' id='star3' onmouseover='light(3)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup47cb.html?id=F4ABE&amp;vote=4&amp;close=1' target='_blank' title='Хорошо'><div class='' id='star4' onmouseover='light(4)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup3ca6.html?id=F4ABE&amp;vote=5&amp;close=1' target='_blank' title='Отлично!'><div class='' id='star5' onmouseover='light(5)' onmouseout='delight()' onclick='voted()'></div></a>
     </div>
     <div class='line' id='line'></div>
-    <div id='thanks' style='display: none; float: left; padding-top: 5px;'>Ñïàñèáî!</div>
+    <div id='thanks' style='display: none; float: left; padding-top: 5px;'>Спасибо!</div>
     </div> <div style='padding-top: 10px;'><!-- AddThis Button BEGIN -->
 <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
 <a class="addthis_button_facebook"></a>
@@ -81,12 +81,12 @@ function voted(){
 
 <script type="text/javascript">var addthis_config = {"data_track_clickback":true};</script>
 <script type="text/javascript" src="../s7.addthis.com/js/250/addthis_widget.js#pubid=nlping"></script>
-<!-- AddThis Button END --></div><div class='relateditems'><p>Ëó÷øèå ìàòåðèàëû ðàçäåëà &quot;Àóäèî&quot;</p> <ul><li><a href='F4AD9.html' title=''>Ñìåíà ïðîôåññèîíàëüíîé äåÿòåëüíîñòè</a></li><li><a href='F4AC0.html' title=''>Èíòóèöèÿ è áåññîçíàòåëüíîå</a></li><li><a href='F4ABF.html' title=''>Ðàáîòà ñ íåãàòèâíûìè ýìîöèÿìè, ñòðàõîì</a></li><li><a href='F4ADA.html' title=''>Áèçíåñ îáó÷åíèå</a></li><li><a href='F4AD8.html' title=''>Âçàèìîîòíîøåíèÿ ñ ëþäüìè</a></li></ul></div> 
-<h3>Êîììåíòàðèè Facebook</h3>
+<!-- AddThis Button END --></div><div class='relateditems'><p>Лучшие материалы раздела &quot;Аудио&quot;</p> <ul><li><a href='F4AD9.html' title=''>Смена профессиональной деятельности</a></li><li><a href='F4AC0.html' title=''>Интуиция и бессознательное</a></li><li><a href='F4ABF.html' title=''>Работа с негативными эмоциями, страхом</a></li><li><a href='F4ADA.html' title=''>Бизнес обучение</a></li><li><a href='F4AD8.html' title=''>Взаимоотношения с людьми</a></li></ul></div> 
+<h3>Комментарии Facebook</h3>
 <div id="fb-root"></div>
 <div class="fb-comments" data-href="http://nlping.ru/F4ABE" data-num-posts="100" data-width="600"></div>
 
-<h3>Êîììåíòàðèè Âêîíòàêòå</h3>
+<h3>Комментарии Вконтакте</h3>
 <div id="vk_comments"></div>
 <script type="text/javascript">
 VK.Widgets.Comments("vk_comments", {limit: 100, width: "600", attach: false});
@@ -109,13 +109,13 @@ VK.Widgets.Comments("vk_comments", {limit: 100, width: "600", attach: false});
     })();
 </script>
 </p>
-</span><p><a href=indexb4fa.html?id=F4ABE class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+</span><p><a href=indexb4fa.html?id=F4ABE class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -176,7 +176,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -198,7 +198,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
