--- a/printb5a6.html
+++ b/printb5a6.html
@@ -2,7 +2,7 @@
 <title>Маркетинговый квадрант</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4AF3 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:01:41 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='Маркетинговый квадрант'>
 <meta name="description" content='Что такое "Маркетинговый квадрант"? Как и когда использовать прием "Истории" или "Качели"? Об этом в одном из кусочков "Тренинга на миллион".'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
