--- a/printb911.html
+++ b/printb911.html
@@ -2,7 +2,7 @@
 <title>Что делать с "балластом" в Вашем окружении?</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4A6C by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:01:54 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='Навряд ли Вы окружены исключительно мыслящими и развивающими Вас людьми. Если так, то Вам очень повезло… (хотя это еще вопрос: повезло ли, или просто Вы тормоз? ;) Так как же вылезти из болота, когда Вас тянут вниз?'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
