--- a/printbc6c.html
+++ b/printbc6c.html
@@ -2,7 +2,7 @@
 <title>О сценарии жизни и ловушках успеха</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=C773D62B-F4430-6810A2BE by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:30:28 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='новый код нлп, нлп'>
 <meta name="description" content='Как мы создаем собственную судьбу, и как мы ее можем изменить.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
