--- a/printbcc7.html
+++ b/printbcc7.html
@@ -2,7 +2,7 @@
 <title>История одного клерка</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=B3682F35-F4707-7A393FEE by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:04:35 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='Про мечту и жизненный путь.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
