--- a/printbde5.html
+++ b/printbde5.html
@@ -2,7 +2,7 @@
 <title>О рычагах и ранах</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=BEF1DF0F-F45D9-C278A48A by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:10:52 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='Материалы с семинара Ричарда Бэндлера по DHE.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
