--- a/printbe54.html
+++ b/printbe54.html
@@ -1,10 +1,10 @@
 <html>
-<title>ÍËÏ äçåí</title>
+<title>НЛП дзен</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=E85033C3-F4457-A1835632 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:58:06 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
-<meta name="keywords" content='íëï'>
-<meta name="description" content='Êîàíû ÍËÏ.'>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="keywords" content='нлп'>
+<meta name="description" content='Коаны НЛП.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
 <!--
@@ -14,15 +14,15 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>ÍËÏ äçåí</h1><a href=indexbe54.html?id=E85033C3-F4457-A1835632 class=slink>web-âåðñèÿ</a><p><span class='print'><p>
-	<ul><li><h2><a href='07418910-F4287-EF16D006.html'>Äçåí áàçîâûõ ïðåñóïïîçèöèé ÍËÏ</a></h2>Êàê âñå íà÷èíàëîñü.</li><li><h2><a href='1CBCC5D6-F4458-755C6468.html'>Äçåí áåñêîíå÷íîñòè</a></h2>Î ïðîñâåòëåíèè, öåëÿõ, ñìåðòè è áåñêîíå÷íîñòè.</li><li><h2><a href='D854A222-F45BE-76241223.html'>Äçåí ñåáÿ</a></h2>Î ìèññèè è ñìûñëå æèçíè.</li><li><h2><a href='F4C44.html'>ÍËÏ äçåí - 8 ëåò ñïóñòÿ</a></h2>Âåëèêèé ìàñòåð Ôè Ãó Íàòå âîçâðàùàåòñÿ! Òðè íîâûõ êîàíà ÍËÏ.</li></ul></p>
-</span><p><a href=indexbe54.html?id=E85033C3-F4457-A1835632 class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>НЛП дзен</h1><a href=indexbe54.html?id=E85033C3-F4457-A1835632 class=slink>web-версия</a><p><span class='print'><p>
+	<ul><li><h2><a href='07418910-F4287-EF16D006.html'>Дзен базовых пресуппозиций НЛП</a></h2>Как все начиналось.</li><li><h2><a href='1CBCC5D6-F4458-755C6468.html'>Дзен бесконечности</a></h2>О просветлении, целях, смерти и бесконечности.</li><li><h2><a href='D854A222-F45BE-76241223.html'>Дзен себя</a></h2>О миссии и смысле жизни.</li><li><h2><a href='F4C44.html'>НЛП дзен - 8 лет спустя</a></h2>Великий мастер Фи Гу Нате возвращается! Три новых коана НЛП.</li></ul></p>
+</span><p><a href=indexbe54.html?id=E85033C3-F4457-A1835632 class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -83,7 +83,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -105,7 +105,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
