--- a/printbf63.html
+++ b/printbf63.html
@@ -2,7 +2,7 @@
 <title>Эксперимент "Вода"</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=CBC51967-F461A-8C8233CC by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:01:46 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='вода, масару эмото, материализация мысли, влияние слов'>
 <meta name="description" content='Эксперимент по влиянию слов и эмоций на структуру воды, проводившийся онлайн. История эксперимента в фотографиях.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
