feat(encoding): reencode indexc* series to utf-8

--- a/printcbaf.html
+++ b/printcbaf.html
@@ -1,10 +1,10 @@
 <html>
-<title>Ìàòåðèàëû Ðè÷àðäà Áýíäëåðà ïî DHE</title>
+<title>Материалы Ричарда Бэндлера по DHE</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=87F837B0-F453B-D2295694 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:57:54 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
-<meta name="keywords" content='dhe, áýíäëåð'>
-<meta name="description" content='Êîíñïåêò ñåìèíàðà, èíòåðâüþ è äð.'>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="keywords" content='dhe, бэндлер'>
+<meta name="description" content='Конспект семинара, интервью и др.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
 <!--
@@ -14,15 +14,15 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Ìàòåðèàëû Ðè÷àðäà Áýíäëåðà ïî DHE</h1><a href=indexcbaf.html?id=87F837B0-F453B-D2295694 class=slink>web-âåðñèÿ</a><p><span class='print'><P><ul><li><h2><a href='899BAF40-F45CD-071EE3E0.html'>Ñåìèíàð Ðè÷àðäà Áýíäëåðà ïî DHE</a></h2>Êîíñïåêò ñåìèíàðà.</li><li><h2><a href='23B4806C-F45D2-CC01FB56.html'>Òåõíèêè DHE</a></h2>Ìàòåðèàëû ñ ñåìèíàðà Ðè÷ðàðäà Áýíäëåðà ïî DHE.</li><li><h2><a href='9531BF9E-F45D5-9073189B.html'>Âñå îáî âñåì</a></h2>Ìàòåðèàëû ñ ñåìèíàðà Ðè÷àðäà Áýíäëåðà ïî DHE.</li><li><h2><a href='BCB9A4D9-F45D7-E2557E7A.html'>Î øèçîôðåíèêàõ è ýíóðåòèêàõ</a></h2>Ìàòåðèàëû ñ ñåìèíàðà Ðè÷àðäà Áýíäëåðà ïî DHE.</li><li><h2><a href='BEF1DF0F-F45D9-C278A48A.html'>Î ðû÷àãàõ è ðàíàõ</a></h2>Ìàòåðèàëû ñ ñåìèíàðà Ðè÷àðäà Áýíäëåðà ïî DHE.</li><li><h2><a href='F9505086-F45DB-F1785BE2.html'>Ìûñëè âñëóõ</a></h2>Ìàòåðèàëû ñ ñåìèíàðà Ðè÷àðäà Áýíäëåðà ïî DHE.</li><li><h2><a href='178A46D8-F45CE-1BC73482.html'>Èíòåðâüþ ñ Äîêòîðîì Ðè÷àðäîì Áýíäëåðîì</a></h2>Ëîñ-Àíäæåëåñ, ÑØÀ, 28 èþëÿ 2000 ã.</li></ul> </P>
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Материалы Ричарда Бэндлера по DHE</h1><a href=indexcbaf.html?id=87F837B0-F453B-D2295694 class=slink>web-версия</a><p><span class='print'><P><ul><li><h2><a href='899BAF40-F45CD-071EE3E0.html'>Семинар Ричарда Бэндлера по DHE</a></h2>Конспект семинара.</li><li><h2><a href='23B4806C-F45D2-CC01FB56.html'>Техники DHE</a></h2>Материалы с семинара Ричрарда Бэндлера по DHE.</li><li><h2><a href='9531BF9E-F45D5-9073189B.html'>Все обо всем</a></h2>Материалы с семинара Ричарда Бэндлера по DHE.</li><li><h2><a href='BCB9A4D9-F45D7-E2557E7A.html'>О шизофрениках и энуретиках</a></h2>Материалы с семинара Ричарда Бэндлера по DHE.</li><li><h2><a href='BEF1DF0F-F45D9-C278A48A.html'>О рычагах и ранах</a></h2>Материалы с семинара Ричарда Бэндлера по DHE.</li><li><h2><a href='F9505086-F45DB-F1785BE2.html'>Мысли вслух</a></h2>Материалы с семинара Ричарда Бэндлера по DHE.</li><li><h2><a href='178A46D8-F45CE-1BC73482.html'>Интервью с Доктором Ричардом Бэндлером</a></h2>Лос-Анджелес, США, 28 июля 2000 г.</li></ul> </P>
 <P>
-</span><p><a href=indexcbaf.html?id=87F837B0-F453B-D2295694 class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+</span><p><a href=indexcbaf.html?id=87F837B0-F453B-D2295694 class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -83,7 +83,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -105,7 +105,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
