--- a/printcc1e.html
+++ b/printcc1e.html
@@ -2,7 +2,7 @@
 <title>Самооценка. Если продавать свою свободу, то за очень большие деньги</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=87A6E5F6-F434F-7433F409 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:02:00 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='Как определить свою цену, и как ее поднять.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
