--- a/printc352.html
+++ b/printc352.html
@@ -2,7 +2,7 @@
 <title>Маленькая душа и солнце</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F471C by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:30:36 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='Притча от Нила Дональда Уолша про то, как важно помнить, кто мы...'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
