--- a/printc4af.html
+++ b/printc4af.html
@@ -2,7 +2,7 @@
 <title>Замутим конец света?! Тренерам и владельцам ТЦ. Срочно!</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4A97 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:01:27 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='тренер'>
 <meta name="description" content='Как раскрутиться, заработать и повеселиться.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
