--- a/printc62a.html
+++ b/printc62a.html
@@ -1,10 +1,10 @@
 <html>
-<title>Êàê èçáåæàòü êðèçèñà â áèçíåñå</title>
+<title>Как избежать кризиса в бизнесе</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4A3F by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:05:58 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
-<meta name="description" content='Êàê íóæíî èçìåíèòü ñâîå ìûøëåíèå, ÷òîáû âûéòè íà íîâûé óðîâåíü â áèçíåñå.'>
+<meta name="description" content='Как нужно изменить свое мышление, чтобы выйти на новый уровень в бизнесе.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
 <!--
@@ -14,10 +14,10 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Êàê èçáåæàòü êðèçèñà â áèçíåñå</h1><a href=indexc62a.html?id=F4A3F class=slink>web-âåðñèÿ</a><p><span class='print'><p>
-	<span style="font-size: 16px;"><strong>Êàê íóæíî èçìåíèòü ñâîå ìûøëåíèå, ÷òîáû âûéòè íà íîâûé óðîâåíü â áèçíåñå.</strong></span></p>
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Как избежать кризиса в бизнесе</h1><a href=indexc62a.html?id=F4A3F class=slink>web-версия</a><p><span class='print'><p>
+	<span style="font-size: 16px;"><strong>Как нужно изменить свое мышление, чтобы выйти на новый уровень в бизнесе.</strong></span></p>
 <p>
-	Ïðîìî-âèäåî ñ ìàñòåð-êëàññà Äåíåæíûé èíòåëëåêò-4Q&quot;</p>
+	Промо-видео с мастер-класса Денежный интеллект-4Q&quot;</p>
 <p>
 	&nbsp;</p>
 <p style="text-align: center;">
@@ -47,16 +47,16 @@ function voted(){
 }
 </script>
     <div class='mark' style='white-space: nowrap; width: 208px; overflow: hidden; float: left;'>
-    <div class='service'>Îöåíèòü:</div>
+    <div class='service'>Оценить:</div>
     <div class='stars' id='stars'>
-    <a href='setup9047.html?id=F4A3F&amp;vote=1&amp;close=1' target='_blank' title='Óæàñíî!'><div class='' id='star1' onmouseover='light(1)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup3627.html?id=F4A3F&amp;vote=2&amp;close=1' target='_blank' title='Ïëîõî'><div class='' id='star2' onmouseover='light(2)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setupefb8.html?id=F4A3F&amp;vote=3&amp;close=1' target='_blank' title='Ñðåäíå'><div class='' id='star3' onmouseover='light(3)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup0398.html?id=F4A3F&amp;vote=4&amp;close=1' target='_blank' title='Õîðîøî'><div class='' id='star4' onmouseover='light(4)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup99c7.html?id=F4A3F&amp;vote=5&amp;close=1' target='_blank' title='Îòëè÷íî!'><div class='' id='star5' onmouseover='light(5)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup9047.html?id=F4A3F&amp;vote=1&amp;close=1' target='_blank' title='Ужасно!'><div class='' id='star1' onmouseover='light(1)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup3627.html?id=F4A3F&amp;vote=2&amp;close=1' target='_blank' title='Плохо'><div class='' id='star2' onmouseover='light(2)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setupefb8.html?id=F4A3F&amp;vote=3&amp;close=1' target='_blank' title='Средне'><div class='' id='star3' onmouseover='light(3)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup0398.html?id=F4A3F&amp;vote=4&amp;close=1' target='_blank' title='Хорошо'><div class='' id='star4' onmouseover='light(4)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup99c7.html?id=F4A3F&amp;vote=5&amp;close=1' target='_blank' title='Отлично!'><div class='' id='star5' onmouseover='light(5)' onmouseout='delight()' onclick='voted()'></div></a>
     </div>
     <div class='line' id='line'></div>
-    <div id='thanks' style='display: none; float: left; padding-top: 5px;'>Ñïàñèáî!</div>
+    <div id='thanks' style='display: none; float: left; padding-top: 5px;'>Спасибо!</div>
     </div> <div style='padding-top: 10px;'><!-- AddThis Button BEGIN -->
 <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
 <a class="addthis_button_facebook"></a>
@@ -79,12 +79,12 @@ function voted(){
 
 <script type="text/javascript">var addthis_config = {"data_track_clickback":true};</script>
 <script type="text/javascript" src="../s7.addthis.com/js/250/addthis_widget.js#pubid=nlping"></script>
-<!-- AddThis Button END --></div><div class='relateditems'><p>Ëó÷øèå ìàòåðèàëû ðàçäåëà &quot;Âèäåî&quot;</p> <ul><li><a href='F47BA.html' title='Ïî÷åìó ëþäè ìàíèïóëèðóþò, êàê çàùèòèòüñÿ îò ýòîãî è ÷åì ìîòèâàöèÿ îòëè÷àåòñÿ îò ìàíèïóëÿöèè. Ôðàãìåíò ñ ïðåçåíòàöèè êíèãè "ÍËÏ êàê îíî åñòü".'>Ìàíèïóëÿöèÿ</a></li><li><a href='F48E0.html' title='×àñòü ïåðâàÿ: Ïîòîê ðóëèò! Íî âûáîð òû äîëæåí ñäåëàòü ñàì. Âèäåî óðîê â ðàìêàõ òåñò-äðàéâà ïðåäñòîÿùåãî òðåíèíãà.'>Êàê âûéòè çà ïðåäåëû âîçìîæíîãî? (1)</a></li><li><a href='F48E1.html' title='Óðîâíè æèçíè. Êàê âûéòè çà ãðàíèöû òîãî, ÷òî ìû ñ÷èòàåì âîçìîæíûì?'>Êàê âûéòè çà ïðåäåëû âîçìîæíîãî? (2)</a></li><li><a href='F4A2C.html' title='3 ôóíäàìåíòàëüíûõ îñíîâû èíòóöèè'>7 èëè 8?</a></li><li><a href='F47B5.html' title='Âèäåî ôðàãìåíò ïðåçåíòàöèè êíèãè "ÍËÏ êàê îíî åñòü. Ïðàêòèêà óñïåõà". Åãîð Áóëûãèí.'>Êàê íå "çàëèïàòü" â ÷óæèå ðîëè è îñòàâàòüñÿ ñîáîé?</a></li></ul></div> 
-<h3>Êîììåíòàðèè Facebook</h3>
+<!-- AddThis Button END --></div><div class='relateditems'><p>Лучшие материалы раздела &quot;Видео&quot;</p> <ul><li><a href='F47BA.html' title='Почему люди манипулируют, как защититься от этого и чем мотивация отличается от манипуляции. Фрагмент с презентации книги "НЛП как оно есть".'>Манипуляция</a></li><li><a href='F48E0.html' title='Часть первая: Поток рулит! Но выбор ты должен сделать сам. Видео урок в рамках тест-драйва предстоящего тренинга.'>Как выйти за пределы возможного? (1)</a></li><li><a href='F48E1.html' title='Уровни жизни. Как выйти за границы того, что мы считаем возможным?'>Как выйти за пределы возможного? (2)</a></li><li><a href='F4A2C.html' title='3 фундаментальных основы интуции'>7 или 8?</a></li><li><a href='F47B5.html' title='Видео фрагмент презентации книги "НЛП как оно есть. Практика успеха". Егор Булыгин.'>Как не "залипать" в чужие роли и оставаться собой?</a></li></ul></div> 
+<h3>Комментарии Facebook</h3>
 <div id="fb-root"></div>
 <div class="fb-comments" data-href="http://nlping.ru/F4A3F" data-num-posts="100" data-width="600"></div>
 
-<h3>Êîììåíòàðèè Âêîíòàêòå</h3>
+<h3>Комментарии Вконтакте</h3>
 <div id="vk_comments"></div>
 <script type="text/javascript">
 VK.Widgets.Comments("vk_comments", {limit: 100, width: "600", attach: false});
@@ -107,13 +107,13 @@ VK.Widgets.Comments("vk_comments", {limit: 100, width: "600", attach: false});
     })();
 </script>
 </b></p>
-</span><p><a href=indexc62a.html?id=F4A3F class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+</span><p><a href=indexc62a.html?id=F4A3F class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -174,7 +174,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -196,7 +196,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
