--- a/printc6c3.html
+++ b/printc6c3.html
@@ -2,7 +2,7 @@
 <title>Маршрут. Часть пятая. Назад в будущее или Самые важные ответы в жизни. Инструкция по предназначению.</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4C24 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:07:32 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content=''>
 <link rel="stylesheet" href="css/print.css" type="text/css">
