--- a/printc6f0.html
+++ b/printc6f0.html
@@ -2,7 +2,7 @@
 <title>Маркетинговая линейка и методика ступенек</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4AF5 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:01:42 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='Маркетинговая линейка и методика ступенек'>
 <meta name="description" content='В этом выпуске о том, как правильно строить свою маркетинговую линейку и взаимодействовать с клиентом. '>
 <link rel="stylesheet" href="css/print.css" type="text/css">
