--- a/printc75d.html
+++ b/printc75d.html
@@ -2,7 +2,7 @@
 <title>Что такое карма на языке психологии?</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4839 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:02:07 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='отношения, любовь'>
 <meta name="description" content='...Или как наши отношения с родителями влияют на наше благосостояние.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
