--- a/printc7be.html
+++ b/printc7be.html
@@ -2,7 +2,7 @@
 <title>НЛП при устройстве на работу</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=34822337-F42AA-90F528B5 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:02:00 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='нлп'>
 <meta name="description" content='Приемы НЛП, которые я опишу ниже, вызовут интерес как у тех, кто устраивается на работу, так и у тех, кто проводит собеседование. Их так же полезно будет знать тем, кто продавая продукт, продает себя.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
