--- a/printc7dc.html
+++ b/printc7dc.html
@@ -2,7 +2,7 @@
 <title>Для чего нужен маркетинг</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4AF4 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:01:42 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content=''>
 <link rel="stylesheet" href="css/print.css" type="text/css">
