--- a/printc829.html
+++ b/printc829.html
@@ -2,7 +2,7 @@
 <title>НЛП дзен - 8 лет спустя</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4C44 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:10:52 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='Великий мастер Фи Гу Нате возвращается! Три новых коана НЛП.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
