--- a/printc85a.html
+++ b/printc85a.html
@@ -1,10 +1,10 @@
 <html>
-<title>Òðåíåðû</title>
+<title>Тренеры</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=trainers by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:22:26 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
-<meta name="keywords" content='Òðåíåðû, Åãîð Áóëûãèí, Òàòüÿíà Ìóæèöêàÿ, Êîíñòàíòèí Ïóõîâ'>
-<meta name="description" content='Ïîäðîáíûå ðåçþìå íàøèõ òðåíåðîâ'>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="keywords" content='Тренеры, Егор Булыгин, Татьяна Мужицкая, Константин Пухов'>
+<meta name="description" content='Подробные резюме наших тренеров'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
 <!--
@@ -14,16 +14,16 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Òðåíåðû</h1><a href=indexc85a.html?id=trainers class=slink>web-âåðñèÿ</a><p><span class='print'><p><span style="font-size: 14px; background-color: rgb(255, 255, 255); "><ul><li><h2><a href='DA048280-F434C-05FECECD.html'>Åãîð Áóëûãèí</a></h2>Åãîð Ñåðãååâè÷ Áóëûãèí. M.A. NLP,  ñåðòèôèöèðîâàííûé êîó÷, ñåðòèôèöèðîâàííûé òðåíåð ÍËÏ (Ìåæäóíàðîäíûé Ýðèêñîíîâñêèé Óíèâåðñèòåò, Êàíàäà), ñïåöèàëèñò ïî Ýðèêñîíîâñêîìó ãèïíîçó (Ì.Ð. Ãèíçáóðã), ïðàêòèê ×æóíü Þàíü Öèãóí (Ñþé Ìèíòàí).</li><li><h2><a href='konstantin_pukhov.html'>Êîíñòàíòèí Ïóõîâ</a></h2>Òpeíep ÍËÏ, ãèïíoòepaïeâò. Òpeíèíãoâaÿ è òepaïeâòè÷ecêaÿ ïpaêòèêa: Îáó÷aþùèe ïpoãpaììû ïo ÍËÏ. Îpãaíèçaöèoííoe êoícóëüòèpoâaíèe. Èíäèâèäóaëüíaÿ ïcèxoòepaïeâòè÷ecêaÿ ïpaêòèêa.</li><li><h2><a href='F4DE6.html'>Ñåðãåé Âåðåâêèí</a></h2>Áèçíåñ-òðåíåð ñ îïûòîì áîëåå 15 ëåò. M.A. NLP, ñåðòèôèöèðîâàííûé ÍËÏ-òðåíåð.</li><li><h2><a href='F4DE7.html'>Òàòüÿíà Åñèíà</a></h2>Òðåíåðñêèé îïûò áîëåå 15 ëåò. Âíåäðåíèå âíóòðèêîðïîðàòèâíîãî îáó÷åíèÿ íà áàçå ðîçíè÷íîé ñåòè DîÌî, ÒÄ Çîëå (ðàçðàáîòêà ïðîãðàìì îáó÷åíèÿ ïåðñîíàëà, àòòåñòàöèîííûå ïðîöåäóðû).</li><li><h2><a href='F4DE8.html'>Ðîìàí Âîðîáüåâ</a></h2>Ïðåäïðèíèìàòåëü, îñíîâàòåëü ÷àéíîé êîìïàíèè Teaholics Group.
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Тренеры</h1><a href=indexc85a.html?id=trainers class=slink>web-версия</a><p><span class='print'><p><span style="font-size: 14px; background-color: rgb(255, 255, 255); "><ul><li><h2><a href='DA048280-F434C-05FECECD.html'>Егор Булыгин</a></h2>Егор Сергеевич Булыгин. M.A. NLP,  сертифицированный коуч, сертифицированный тренер НЛП (Международный Эриксоновский Университет, Канада), специалист по Эриксоновскому гипнозу (М.Р. Гинзбург), практик Чжунь Юань Цигун (Сюй Минтан).</li><li><h2><a href='konstantin_pukhov.html'>Константин Пухов</a></h2>Тpeнep НЛП, гипнoтepaпeвт. Тpeнингoвaя и тepaпeвтичecкaя пpaктикa: Обучaющиe пpoгpaммы пo НЛП. Оpгaнизaциoннoe кoнcультиpoвaниe. Индивидуaльнaя пcиxoтepaпeвтичecкaя пpaктикa.</li><li><h2><a href='F4DE6.html'>Сергей Веревкин</a></h2>Бизнес-тренер с опытом более 15 лет. M.A. NLP, сертифицированный НЛП-тренер.</li><li><h2><a href='F4DE7.html'>Татьяна Есина</a></h2>Тренерский опыт более 15 лет. Внедрение внутрикорпоративного обучения на базе розничной сети DоМо, ТД Золе (разработка программ обучения персонала, аттестационные процедуры).</li><li><h2><a href='F4DE8.html'>Роман Воробьев</a></h2>Предприниматель, основатель чайной компании Teaholics Group.
 
-Áèçíåñ-òðåíåð è êîó÷ áîëåå 7 ëåò.</li></ul></span></p>
-</span><p><a href=indexc85a.html?id=trainers class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+Бизнес-тренер и коуч более 7 лет.</li></ul></span></p>
+</span><p><a href=indexc85a.html?id=trainers class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -84,7 +84,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -106,7 +106,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
