--- a/printcbfb.html
+++ b/printcbfb.html
@@ -2,7 +2,7 @@
 <title>Уровни Грэйвза. История возникновения.</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=D33444E2-F45BA-BF4A5D57 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:59:45 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='Работа Грэйвза и предпосылки Спиральной Динамики.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
