--- a/printcf5c.html
+++ b/printcf5c.html
@@ -2,7 +2,7 @@
 <title>Эмоции и НЛП. Как работают метасообщения.</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=4DFA878B-F4689-9A199D40 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:28:20 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='нлп, эмоции, метасообщения'>
 <meta name="description" content='Статья про то, как делать слова живыми.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
