feat(encoding): reencode indexd series to utf-8

--- a/indexda68.html
+++ b/indexda68.html
@@ -8,7 +8,7 @@
         <meta name="robots" content="index,follow" />
         <meta name="description" content="Почему люди ошибаются, даже когда все знают?  Случалось ли Вам совершать серьезную ошибку, а потом ловить себя на мысли: "Я же знал, как нужно было сделать!"  И тем досаднее ошибка, чем серьезнее потеря и очевиднее "как надо было поступить".  Вы можете избежать 92% таких ошибок в будущем (8% - это, увы, неизбежная статистика).   Причины всех ошибок кроются в одной из двух плоскостей:  Первая плоскость - это "залипание" в одну из крайностей. Либов в эмоции, что лишает здравой оценки ситуации (такое бывает у сильно эмоциональных людей). Либо в чрезмерную рационализацию, что лишает чувствования и предвидения "человеческих факторов" (это свойственно большинству мыслителей с очень сильным умом)." />
         <meta name="keywords" content="" />
-        <meta http-equiv="Content-Type" content="text/html; charset=windows-1251" />
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <link rel="alternate" type="application/rss+xml" title="RSS 2.0" href="rss/index.html" />
         <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
         
