--- a/printd00d.html
+++ b/printd00d.html
@@ -2,7 +2,7 @@
 <title>Интервью с Доктором Ричардом Бэндлером</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=178A46D8-F45CE-1BC73482 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:09:38 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='нлп'>
 <meta name="description" content='Лос-Анджелес, США, 28 июля 2000 г.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
