--- a/printd101.html
+++ b/printd101.html
@@ -2,7 +2,7 @@
 <title>Метод Оптимизации Системных Коммуникаций (МОСК)</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=EE42B048-F466C-394CC55A by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:09:43 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='Пошаговая инструкция оптимизации системы.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
