--- a/printd3f2.html
+++ b/printd3f2.html
@@ -2,7 +2,7 @@
 <title>Статья "Как решать психологические задачи самостоятельно?" Часть 3</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4DFE by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:23:12 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='Итак, мы подошли к мечте каждого человека, кто устал от конфликтов и эмоциональных расстройств, и хочет любви и взаимопонимания...Как превратить конфликт в наполненную любовью и уважением беседу?
 Как изменить свое эмоциональное состояние и контролировать ситуацию?
