--- a/printdb75.html
+++ b/printdb75.html
@@ -2,7 +2,7 @@
 <title>Зрительная логика и интуиция ...или почему мы всё еще не ясновидящие?</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F47E3 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:01:19 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='зрительная логика, интуиция, третий глаз'>
 <meta name="description" content='Как устроен этот механизм (прогнозирования будущего) с научной позиции. ...А вернее, не столько как он устроен, сколько как его развить и какие препятствия нужно преодолеть.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
