--- a/printdc03.html
+++ b/printdc03.html
@@ -2,7 +2,7 @@
 <title>К черту правила! Давайте надерем им задницу!</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F48DB by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:01:12 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='Третий уровень Спиральной динамики - "красный". Как мыслят люди этого уровня, как ими можно управлять и что ни в коем случае нельзя делать в общении с ними.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
