--- a/printd25c.html
+++ b/printd25c.html
@@ -2,7 +2,7 @@
 <title>Спиральная динамика и мышление второго порядка</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=A47105BE-F45D0-E25D9CAB by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:59:46 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='спиральная динамика'>
 <meta name="description" content='Полная версия главы «Спиральная динамика: пример волн бытия» из книги Кена Уилбера «Интегральная психология».'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
