--- a/printd268.html
+++ b/printd268.html
@@ -2,7 +2,7 @@
 <title>Новый Код НЛП - опыт первого класса</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=851C6553-F4374-FBE82011 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:09:36 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='новый код нлп, нлп'>
 <meta name="description" content='О концепции четырех классов опыта Тони Роббинса и Новом Коде НЛП.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
