--- a/printd3cb.html
+++ b/printd3cb.html
@@ -2,7 +2,7 @@
 <title>Личностное редактирование</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=360BA754-F466D-72D2651C by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:13:03 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='Техники самостоятельного решения внутренних задач и "распрограммирования" нежелательных состояний и паттернов.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
