--- a/printd551.html
+++ b/printd551.html
@@ -1,12 +1,12 @@
 <html>
-<title>Ðîìàí Âîðîáüåâ</title>
+<title>Роман Воробьев</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4DE8 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:09:21 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
-<meta name="description" content='Ïðåäïðèíèìàòåëü, îñíîâàòåëü ÷àéíîé êîìïàíèè Teaholics Group.
+<meta name="description" content='Предприниматель, основатель чайной компании Teaholics Group.
 
-Áèçíåñ-òðåíåð è êîó÷ áîëåå 7 ëåò.'>
+Бизнес-тренер и коуч более 7 лет.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
 <!--
@@ -16,18 +16,18 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Ðîìàí Âîðîáüåâ</h1><a href=indexd551.html?id=F4DE8 class=slink>web-âåðñèÿ</a><p><span class='print'><p><img alt="" src="img/vorobyevwhite_krctZvR.jpg" style="width: 130px; height: 155px; float: left; margin-left: 10px; margin-right: 10px;" />Ïðåäïðèíèìàòåëü, îñíîâàòåëü ÷àéíîé êîìïàíèè Teaholics Group.</p>
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Роман Воробьев</h1><a href=indexd551.html?id=F4DE8 class=slink>web-версия</a><p><span class='print'><p><img alt="" src="img/vorobyevwhite_krctZvR.jpg" style="width: 130px; height: 155px; float: left; margin-left: 10px; margin-right: 10px;" />Предприниматель, основатель чайной компании Teaholics Group.</p>
 
-<p>Áèçíåñ-òðåíåð è êîó÷ áîëåå 7 ëåò.</p>
+<p>Бизнес-тренер и коуч более 7 лет.</p>
 
-<p>Ðàáîòàë ñ Àëüôà áàíêîì, Ñáåðáàíêîì, ñáîðíîé Ðîññèè ïî ôóòáîëó, Ôåäåðàöèåé éîãè. Îáó÷àëñÿ ó âñåìèðíî èçâåñòíûõ òðåíåðîâ: Ìýðëèí Àòêèíñîí, Ôðýíê Ïüþñåëèê, Äîí Áåê è äðóãèõ.</p>
-</span><p><a href=indexd551.html?id=F4DE8 class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+<p>Работал с Альфа банком, Сбербанком, сборной России по футболу, Федерацией йоги. Обучался у всемирно известных тренеров: Мэрлин Аткинсон, Фрэнк Пьюселик, Дон Бек и других.</p>
+</span><p><a href=indexd551.html?id=F4DE8 class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -88,7 +88,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -110,7 +110,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
