--- a/printd960.html
+++ b/printd960.html
@@ -2,7 +2,7 @@
 <title>Пространство сознания</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=C4825A68-F46B7-F6490963 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:09:43 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='Главы 23-46'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
