--- a/printd983.html
+++ b/printd983.html
@@ -2,7 +2,7 @@
 <title>Интервью с Джоном Гриндером и Фрэнком Пьюселиком о возникновении НЛП</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=40C147DD-F461B-B427EF74 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:55:56 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='нлп'>
 <meta name="description" content='Создатели  НЛП рассказывают, как все начиналось.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
