--- a/printdce7.html
+++ b/printdce7.html
@@ -2,7 +2,7 @@
 <title>Мышление в формате успеха</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=8A706C62-F4694-8E500684 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:01:48 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='мышление'>
 <meta name="description" content='Как наше сознание создает нашу жизнь, и как это использовать.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
